# trout-dev

./: .gitignore  Cargo.toml  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/core/: audio_file.rs  database.rs  logger.rs  mod.rs
backend/src/sites/: mod.rs  spotify.rs
backend/src/subcommands/: gen.rs  mod.rs  new.rs  play.rs
etc/example/: config.toml  playlist.json
frontend/: Cargo.toml
frontend/src/: main.rs
old/: trout.code-workspace
old/backend/src/: main.rs
old/backend/src/core/: database.rs  logger.rs  mod.rs  structs.rs
old/backend/src/sites/: spotify.rs
old/etc/example/: database.json  song.json
old/frontend/: README.md
old/frontend/src/: frontend.sh
src/: main.rs
src/cli/: args.rs  trout.code-workspace
