[package]
name = "trout-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
xdg = "2.4.1"
serde_json = "1.0.0"
rodio = "0.16.0"
rand = "0.8.5"
metaflac = "0.2"
tokio = { version = "1.21.2", features = ["full"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }
futures = "0.3"