[package]
name = "trout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }
